# storage-server

./: Cargo.toml  Dockerfile.client  Dockerfile.server  README.md  docker-compose.yml
client/: Cargo.toml
client/src/: http_client.rs  main.rs  prompt.rs
merkle/: Cargo.toml
merkle/benches/: merkle.rs  merkle_tree.rs
merkle/src/: tree.rs
server/: Cargo.toml
server/src/: app.rs  client_bucket.rs  database.rs  main.rs
