[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
sha2 = "0.10" 
hyper = { version = "0.14", features = ["full"] }
warp = "0.3"
bincode = "1.3"
bytes = "1.4"
log = "0.4"
env_logger = "0.10"
structopt = "0.3" 
rand = "0.8.5"
requestty = "0.5.0"
thiserror = "1.0"

clap = { version="4.5.20", features = ["derive"] }
tracing = "=0.1.40"
tracing-subscriber = { workspace = true, features = [
    "fmt",
    "env-filter",
    "json",
] }
 

merkle = {  workspace = true }
hex = "0.4.3"
chacha20 = "0.9.1"
