[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
sha2 = { workspace = true } 
hyper = { workspace = true }
warp = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
log = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
merkle = {  workspace = true }
tracing-subscriber = { workspace = true }

hex = "0.4.3"
chacha20 = "0.9.1"
rand = "0.8.5"
requestty = "0.5.0"
thiserror = "1.0"
serde = { version="1.0", features = ["derive"] }

 

 


