[package]
name = "server"
version = "0.1.0"
edition = "2021"
 
[dependencies]
tokio = { workspace = true }
sha2 = { workspace = true } 
hyper = { workspace = true }
warp = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
log = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hex = { workspace = true}

merkle = {  workspace = true }
 
